# ions

./: .buildinfo  Pipfile  README.md  api_reference.html  best_practices.html  cluster_managment.html  common.constants.html  common.debug.html  common.globals.html  common.html  config.sh  data_io.html  data_io.py  debugging.html  documentation.html  evaluation_plotting.html  exporters.html  exporters.py  extending.html  extractors.html  extractors.py  gdb_helper.html  general.html  genindex.html  index.html  inspect_feather.py  installation.html  jupyter_labs.html  objects.inv  plots.html  plots.py  py-modindex.html  pyproject.toml  quickstart.html  recipe.html  recipe.py  requirements.txt  run_recipe.html  run_recipe.py  search.html  (+21 more)
.doctrees/: api_reference.doctree  best_practices.doctree  cluster_managment.doctree  common.constants.doctree  common.debug.doctree  common.doctree  common.globals.doctree  data_io.doctree  debugging.doctree  documentation.doctree  environment.pickle  evaluation_plotting.doctree  exporters.doctree  extending.doctree  extractors.doctree  gdb_helper.doctree  general.doctree  index.doctree  installation.doctree  jupyter_labs.doctree  plots.doctree  quickstart.doctree  recipe.doctree  run_recipe.doctree  sql_model.doctree  sql_queries.doctree  tag.doctree  tag_extractor.doctree  tag_regular_expressions.doctree  tools.doctree  transforms.doctree  troubleshooting.doctree  using_transforms.doctree  utility.doctree  writing_recipes.doctree  yaml_helper.doctree
.github/workflows/: sphinx.yml
_modules/: data_io.html  exporters.html  extractors.html  index.html  plots.html  recipe.html  run_recipe.html  sql_model.html  sql_queries.html  tag.html  tag_extractor.html  transforms.html  yaml_helper.html
_modules/common/: debug.html
_modules/utility/: arithmetic.html  code.html  filesystem.html  stopwatch.html
_sources/: best_practices.md.txt  cluster_managment.md.txt  common.debug.rst.txt  debugging.md.txt  documentation.md.txt  evaluation_plotting.md.txt  extending.md.txt  extractors.rst.txt  general.md.txt  index.rst.txt  installation.md.txt  quickstart.md.txt  recipe.rst.txt  tag_extractor.rst.txt  tag_regular_expressions.rst.txt  tools.md.txt  transforms.rst.txt  troubleshooting.md.txt  using_transforms.md.txt  utility.rst.txt  writing_recipes.md.txt
common/: common_sets.py  constants.py  debug.py  globals.py  logging_facilities.py
doc/: Makefile
doc/source/: api_reference.rst  best_practices.md  cluster_managment.md  common.rst  conf.py  data_handling.data_objects.rst  data_handling.rst  data_handling.source_mux.rst  data_handling.sources.rst  data_objects.rst  eval.rst  evaluation.evaluation_runner.rst  evaluation.rst  evaluation.run_conf.rst  evaluation_plotting.md  evaluation_runner.rst  exporters.rst  extending.md  extractors.rst  filters.rst  gdb_helper.md  general.md  index.rst  jupyter_labs.md  operations.rst  pipeline.rst  plot.rst  plot_types.rst  plots.rst  plotting.pipeline.rst  plotting.plot_types.rst  plotting.plotter.rst  plotting.rst  plotting.run_conf.rst  plotting.style.rst  plotting.utility.rst  run_recipe.rst  sql_model.rst  tools.md  troubleshooting.md  (+9 more)
docs/: Makefile  requirements.txt
docs/source/: best_practices.md  cluster_managment.md  common.constants.rst  common.globals.rst  conf.py  debugging.md  documentation.md  evaluation_plotting.md  exporters.rst  general.md  index.rst  installation.md  quickstart.md  sql_queries.rst  tag.rst  tools.md  using_transforms.md  utility.rst  yaml_helper.rst
examples/: AoI.yaml  CUI.yaml  MultiPlot.yaml  boxStats.yaml  lineplot.yaml  matplotlib_example.rc  patternMatchedStatistics.yaml  recipe.yaml  sqlextractor.yaml  statistic.yaml
utility/: arithmetic.py  code.py  filesystem.py  stopwatch.py
