[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Christian Hagau", email = "hagau@ibr.cs.tu-bs.de"},
]
dependencies = [
    "matplotlib==3.9.1",
    "numpy==2.0.1",
    "jsonpickle",
    "ujson",
    "pandas==2.2.2",
    "scipy==1.14.0",
    "SQLAlchemy",
    "seaborn",
    "sphinx",
    "numpydoc",
    "sphinx-rtd-theme",
    "recommonmark",
    "tabulate",
    "bottleneck",
    "numexpr",
    "pyarrow",
    "dask[complete]==2024.7.1",
    "dask-jobqueue==0.8.5",
    "distributed==2024.7.1",
    "graphviz>=0.20.1",
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
]
requires-python = ">=3.10,<3.13"
license = {text = "GPLv3"}
readme = "README.md"
[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.2.6",
    "autopep8",
    "wrapt",
    "typed-ast",
    "rope",
    "pycodestyle",
    "mccabe",
    "lazy-object-proxy",
    "isort",
    "mypy>=0.982",
    "autoflake>=1.7.7",
    "ruff>=0.4.9",
]
