[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Christian Hagau", email = "hagau@ibr.cs.tu-bs.de"},
]
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.3.0",
    "jsonpickle",
    "ujson",
    "pandas==2.3.3",
    "SQLAlchemy",
    "seaborn==0.13.2",
    "sphinx",
    "numpydoc",
    "sphinx-rtd-theme",
    "recommonmark",
    "tabulate",
    "bottleneck",
    "numexpr",
    "pyarrow",
    "dask[complete]==2025.11.0",
    "dask-jobqueue==0.9.0",
    "distributed==2025.11.0",
    "graphviz>=0.20.1",
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
    "yamllint>=1.35.1",
]
requires-python = ">=3.11,<3.14"
license = {text = "GPLv3"}
readme = "README.md"
[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.2.6",
    "autopep8",
    "wrapt",
    "rope",
    "pycodestyle",
    "mccabe",
    "lazy-object-proxy",
    "isort",
    "mypy>=0.982",
    "autoflake>=1.7.7",
    "ruff>=0.4.9",
]
